--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -1,34 +1,6 @@
-/AutoSave.class
-/AutoSaveFS.class
 /Bugs.rtf
 /Changes.txt
-/Client.class
-/Envelope.class
-/EnvelopeTest.class
-/FileClient.class
-/FileClientInterface.class
-/FileClientSubInterface.class
-/FileList.class
-/FileServer.class
-/FileThread.class
-/GroupClient.class
-/GroupClientEnd.class
-/GroupClientInterface.class
-/GroupClientSubInterface.class
-/GroupServer.class
-/GroupThread.class
-/MainUserInterface.class
-/RunFileServer.class
-/RunGroupServer.class
-/Server.class
-/ShareFile.class
-/ShareFileTest.class
-/ShutDownListener.class
-/ShutDownListenerFS.class
-/Token.class
-/TokenTest.class
-/UserList$User.class
+/Main
+/Testing
 /UserList.bin
-/UserList.class
-/UserToken.class
 /vms.c
