--- a/.classpath
+++ b/.classpath
@@ -4,5 +4,12 @@
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.7"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
 	<classpathentry kind="lib" path="B:/Downloads/mockito-all-1.9.5.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Harrison/Documents/GitHub/FileServerTesting/CucumberJars/cucumber-core-1.1.5.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Harrison/Documents/GitHub/FileServerTesting/CucumberJars/cucumber-html-0.2.3.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Harrison/Documents/GitHub/FileServerTesting/CucumberJars/cucumber-java-1.1.5.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Harrison/Documents/GitHub/FileServerTesting/CucumberJars/cucumber-junit-1.1.5.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Harrison/Documents/GitHub/FileServerTesting/CucumberJars/cucumber-jvm-deps-1.0.3.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Harrison/Documents/GitHub/FileServerTesting/CucumberJars/gherkin-2.12.2.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Harrison/Documents/GitHub/FileServerTesting/CucumberJars/jchronic-0.2.6.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
